docs/envoy/v1.27.1/_sources/intro/arch_overview/security/external_dep_dataplane_ext.rst.txt
External dependencies: ``dataplane_ext``
========================================


envoy.access_loggers.extension_filters.cel
------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.access_loggers.wasm
-------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.bootstrap.wasm
--------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.compression.brotli.compressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `brotli <https://brotli.org>`__, `6d03dfb <https://github.com/google/brotli/tree/6d03dfbedda1615c4cba1211f8d81735575209c8>`__, 2022-10-25, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__, `MIT <https://github.com/google/brotli/blob/6d03dfbedda1615c4cba1211f8d81735575209c8/LICENSE>`__


envoy.compression.brotli.decompressor
-------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `brotli <https://brotli.org>`__, `6d03dfb <https://github.com/google/brotli/tree/6d03dfbedda1615c4cba1211f8d81735575209c8>`__, 2022-10-25, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__, `MIT <https://github.com/google/brotli/blob/6d03dfbedda1615c4cba1211f8d81735575209c8/LICENSE>`__


envoy.compression.zstd.compressor
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `zstd <https://facebook.github.io/zstd>`__, `1.5.5 <https://github.com/facebook/zstd/releases/tag/v1.5.5>`__, 2023-04-04, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__, 


envoy.compression.zstd.decompressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `zstd <https://facebook.github.io/zstd>`__, `1.5.5 <https://github.com/facebook/zstd/releases/tag/v1.5.5>`__, 2023-04-04, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__, 


envoy.filters.http.aws_lambda
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `8.2.1 <https://github.com/curl/curl/releases/tag/curl-8_2_1>`__, 2023-07-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-8_2_1/COPYING>`__


envoy.filters.http.aws_request_signing
--------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `8.2.1 <https://github.com/curl/curl/releases/tag/curl-8_2_1>`__, 2023-07-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-8_2_1/COPYING>`__


envoy.filters.http.gcp_authn
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `c29ba4b <https://github.com/google/jwt_verify_lib/tree/c29ba4bdab2cc9a7b4d80d1d3ebff3bf5b9bf6e2>`__, 2022-11-04, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/c29ba4bdab2cc9a7b4d80d1d3ebff3bf5b9bf6e2/LICENSE>`__


envoy.filters.http.grpc_field_extraction
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `ff41eb3 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/ff41eb3fc9209e6197595b54f7addfa244c0bdb6>`__, 2023-06-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/ff41eb3fc9209e6197595b54f7addfa244c0bdb6/LICENSE>`__
  `ocp <https://github.com/opencomputeproject/ocp-diag-core>`__, `e965ac0 <https://github.com/opencomputeproject/ocp-diag-core/tree/e965ac0ac6db6686169678e2a6c77ede904fa82c>`__, 2023-05-05, , `Apache-2.0 <https://github.com/opencomputeproject/ocp-diag-core/blob/e965ac0ac6db6686169678e2a6c77ede904fa82c/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `d77ff30 <https://github.com/grpc-ecosystem/proto-converter/tree/d77ff301f48bf2e7a0f8935315e847c1a8e00017>`__, 2023-06-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/d77ff301f48bf2e7a0f8935315e847c1a8e00017/LICENSE>`__
  `proto-field-extraction <https://github.com/grpc-ecosystem/proto-field-extraction>`__, `2dfe275 <https://github.com/grpc-ecosystem/proto-field-extraction/tree/2dfe27548e1f21a665f9068b97b2fc5beb678566>`__, 2023-07-18, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-field-extraction/blob/2dfe27548e1f21a665f9068b97b2fc5beb678566/LICENSE>`__


envoy.filters.http.grpc_json_transcoder
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `ff41eb3 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/ff41eb3fc9209e6197595b54f7addfa244c0bdb6>`__, 2023-06-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/ff41eb3fc9209e6197595b54f7addfa244c0bdb6/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `d77ff30 <https://github.com/grpc-ecosystem/proto-converter/tree/d77ff301f48bf2e7a0f8935315e847c1a8e00017>`__, 2023-06-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/d77ff301f48bf2e7a0f8935315e847c1a8e00017/LICENSE>`__
  `proto-field-extraction <https://github.com/grpc-ecosystem/proto-field-extraction>`__, `2dfe275 <https://github.com/grpc-ecosystem/proto-field-extraction/tree/2dfe27548e1f21a665f9068b97b2fc5beb678566>`__, 2023-07-18, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-field-extraction/blob/2dfe27548e1f21a665f9068b97b2fc5beb678566/LICENSE>`__


envoy.filters.http.jwt_authn
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `c29ba4b <https://github.com/google/jwt_verify_lib/tree/c29ba4bdab2cc9a7b4d80d1d3ebff3bf5b9bf6e2>`__, 2022-11-04, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/c29ba4bdab2cc9a7b4d80d1d3ebff3bf5b9bf6e2/LICENSE>`__


envoy.filters.http.language
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `ICU Library <https://github.com/unicode-org/icu>`__, `72-1 <https://github.com/unicode-org/icu/releases/tag/release-72-1>`__, 2022-10-18, , `ICU <https://github.com/unicode-org/icu/blob/release-72-1/icu4c/LICENSE>`__


envoy.filters.http.lua
----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LuaJIT <https://luajit.org>`__, `1c27912 <https://github.com/LuaJIT/LuaJIT/tree/1c279127050e86e99970100e9c42e0f09cd54ab7>`__, 2023-04-16, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__, `MIT <https://github.com/LuaJIT/LuaJIT/blob/1c279127050e86e99970100e9c42e0f09cd54ab7/COPYRIGHT>`__


envoy.filters.http.rbac
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.filters.http.wasm
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.filters.network.dubbo_proxy
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `e9bb36e <https://github.com/alibaba/hessian2-codec/tree/e9bb36e206f2c5054b50d11f88bb1b95c77766f8>`__, 2022-10-10, , `Apache-2.0 <https://github.com/alibaba/hessian2-codec/blob/e9bb36e206f2c5054b50d11f88bb1b95c77766f8/LICENSE>`__


envoy.filters.network.kafka_broker
----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Kafka (source) <https://kafka.apache.org>`__, `3.5.1 <https://github.com/apache/kafka/releases/tag/3.5.1>`__, 2023-07-14, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/apache/kafka/blob/3.5.1/LICENSE>`__


envoy.filters.network.kafka_mesh
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Kafka (C/C++ client) <https://github.com/edenhill/librdkafka>`__, `2.2.0 <https://github.com/edenhill/librdkafka/releases/tag/v2.2.0>`__, 2023-07-12, , `librdkafka <https://github.com/edenhill/librdkafka/blob/v2.2.0/LICENSE>`__
  `Kafka (source) <https://kafka.apache.org>`__, `3.5.1 <https://github.com/apache/kafka/releases/tag/3.5.1>`__, 2023-07-14, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/apache/kafka/blob/3.5.1/LICENSE>`__


envoy.filters.network.mysql_proxy
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, , `MIT <https://github.com/envoyproxy/sql-parser/blob/3b40ba2d106587bdf053a292f7e3bb17e818a57f/LICENSE>`__


envoy.filters.network.postgres_proxy
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, , `MIT <https://github.com/envoyproxy/sql-parser/blob/3b40ba2d106587bdf053a292f7e3bb17e818a57f/LICENSE>`__


envoy.filters.network.rbac
--------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.filters.network.wasm
--------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.formatter.cel
-------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.grpc_credentials.aws_iam
------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `8.2.1 <https://github.com/curl/curl/releases/tag/curl-8_2_1>`__, 2023-07-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-8_2_1/COPYING>`__


envoy.matching.input_matchers.hyperscan
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Boost <https://www.boost.org/>`__, `1.78.0 <https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.gz>`__, 2021-12-08, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__, `Boost <https://github.com/boostorg/boost/blob/boost-1.78.0/LICENSE_1_0.txt>`__
  `Colm <https://www.colm.net/open-source/colm/>`__, `2d8ba76 <https://github.com/adrian-thurston/colm/tree/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/colm/blob/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf/COPYING>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.2 <https://github.com/intel/hyperscan/releases/tag/v5.4.2>`__, 2023-04-19, , `BSD-3-Clause <https://github.com/intel/hyperscan/blob/5.4.2/LICENSE>`__
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `d4577c9 <https://github.com/adrian-thurston/ragel/tree/d4577c924451b331c73c8ed0af04f6efd35ac0b4>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/ragel/blob/d4577c924451b331c73c8ed0af04f6efd35ac0b4/COPYING>`__


envoy.matching.inputs.cel_data_input
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.matching.matchers.cel_matcher
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.network.connection_balance.dlb
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Intel Dlb <https://networkbuilders.intel.com/solutionslibrary/queue-management-and-load-balancing-on-intel-architecture>`__, `8.0.0 <https://downloadmirror.intel.com/763709/dlb_linux_src_release8.0.0.txz>`__, 2022-12-15, , 


envoy.rate_limit_descriptors.expr
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.rbac.matchers.upstream_ip_port
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__


envoy.regex_engines.hyperscan
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Boost <https://www.boost.org/>`__, `1.78.0 <https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.gz>`__, 2021-12-08, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__, `Boost <https://github.com/boostorg/boost/blob/boost-1.78.0/LICENSE_1_0.txt>`__
  `Colm <https://www.colm.net/open-source/colm/>`__, `2d8ba76 <https://github.com/adrian-thurston/colm/tree/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/colm/blob/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf/COPYING>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.2 <https://github.com/intel/hyperscan/releases/tag/v5.4.2>`__, 2023-04-19, , `BSD-3-Clause <https://github.com/intel/hyperscan/blob/5.4.2/LICENSE>`__
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `d4577c9 <https://github.com/adrian-thurston/ragel/tree/d4577c924451b331c73c8ed0af04f6efd35ac0b4>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/ragel/blob/d4577c924451b331c73c8ed0af04f6efd35ac0b4/COPYING>`__


envoy.stat_sinks.wasm
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `da0aba7 <https://github.com/google/cel-cpp/tree/da0aba702f44a41ec6d2eb4bbf6a9f01efc2746d>`__, 2023-03-08, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `23.3.3 <https://github.com/google/flatbuffers/releases/tag/v23.3.3>`__, 2023-03-03, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v23.3.3/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.tls.key_providers.cryptomb
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `libipp-crypto <https://github.com/intel/ipp-crypto>`__, `2021.6 <https://github.com/intel/ipp-crypto/releases/tag/ippcp_2021.6>`__, 2022-08-09, `cpe:2.3:a:intel:cryptography_for_intel_integrated_performance_primitives:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aintel%3Acryptography_for_intel_integrated_performance_primitives%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/intel/ipp-crypto/blob/ippcp_2021.6/LICENSE>`__


envoy.tls.key_providers.qat
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `qatlib <https://github.com/intel/qatlib>`__, `23.02.0 <https://github.com/intel/qatlib/releases/tag/23.02.0>`__, 2023-02-24, , `BSD-3-Clause <https://github.com/intel/qatlib/blob/23.02.0/LICENSE>`__


envoy.tracers.opencensus
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `8.2.1 <https://github.com/curl/curl/releases/tag/curl-8_2_1>`__, 2023-07-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-8_2_1/COPYING>`__


envoy.wasm.runtime.null
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.wasm.runtime.v8
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Chromium's trace event headers <https://chromium.googlesource.com/chromium/src/base/trace_event/common/>`__, `521ac34 <https://storage.googleapis.com/envoyproxy-wee8/chromium-base_trace_event_common-521ac34ebd795939c7e16b37d9d3ddb40e8ed556.tar.gz>`__, 2022-10-12, , 
  `V8 <https://v8.dev>`__, `10.7.193.13 <https://storage.googleapis.com/envoyproxy-wee8/v8-10.7.193.13.tar.gz>`__, 2022-10-12, `cpe:2.3:a:google:v8:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Av8%3A%2A&search_type=all>`__, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.wasm.runtime.wamr
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LLVM <https://llvm.org>`__, `12.0.1 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-12.0.1>`__, 2021-07-09, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-12.0.1/llvm/LICENSE.TXT>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__
  `Webassembly Micro Runtime <https://github.com/bytecodealliance/wasm-micro-runtime>`__, `WAMR-1.2.2 <https://github.com/bytecodealliance/wasm-micro-runtime/releases/tag/WAMR-1.2.2>`__, 2023-05-16, , `Apache-2.0 <https://github.com/bytecodealliance/wasm-micro-runtime/blob/WAMR-1.2.2/LICENSE>`__


envoy.wasm.runtime.wasmtime
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.27.0 <https://github.com/bazelbuild/rules_rust/releases/tag/0.27.0>`__, 2023-08-31, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.27.0/LICENSE.txt>`__
  `wasm-c-api <https://github.com/WebAssembly/wasm-c-api>`__, `c9d3128 <https://github.com/WebAssembly/wasm-c-api/tree/c9d31284651b975f05ac27cee0bab1377560b87e>`__, 2021-01-11, , `Apache-2.0 <https://github.com/WebAssembly/wasm-c-api/blob/c9d31284651b975f05ac27cee0bab1377560b87e/LICENSE>`__
  `wasmtime <https://github.com/bytecodealliance/wasmtime>`__, `9.0.3 <https://github.com/bytecodealliance/wasmtime/releases/tag/v9.0.3>`__, 2023-05-31, `cpe:2.3:a:bytecodealliance:wasmtime:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Abytecodealliance%3Awasmtime%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/bytecodealliance/wasmtime/blob/v9.0.3/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.wasm.runtime.wavm
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LLVM <https://llvm.org>`__, `12.0.1 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-12.0.1>`__, 2021-07-09, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-12.0.1/llvm/LICENSE.TXT>`__
  `WAVM <https://wavm.github.io>`__, `3f9a150 <https://github.com/WAVM/WAVM/tree/3f9a150cac7faf28eab357a2c5b83d2ec740c7d9>`__, 2022-05-14, `cpe:2.3:a:webassembly_virtual_machine_project:webassembly_virtual_machine:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Awebassembly_virtual_machine_project%3Awebassembly_virtual_machine%3A%2A&search_type=all>`__, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `5d76116 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/5d76116c449d6892b298b7ae79a84ef1cf5752bf>`__, 2023-06-01, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/5d76116c449d6892b298b7ae79a84ef1cf5752bf/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__

